--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.22.1",
     "express-session": "^1.19.0",
     "jsonwebtoken": "^9.0.3",
+    "method-override": "^3.0.0",
     "mongoose": "^8.22.0",
     "morgan": "^1.10.1",
     "winston": "^3.19.0"
